--- a/Math Library/Math Library/Math Library.vcxproj.filters
+++ b/Math Library/Math Library/Math Library.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="..\..\..\..\..\..\..\Seth%27s Work\Maths for Games\Maths for Games Assignments\Math Library\trunk\Math Library\Math Library\Vector3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Seth%27s Work\Maths for Games\Maths for Games Assignments\Math Library\trunk\Math Library\Math Library\Binary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\..\Seth%27s Work\Maths for Games\Maths for Games Assignments\Math Library\trunk\Math Library\Math Library\Vector4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\..\..\..\Seth%27s Work\Maths for Games\Maths for Games Assignments\Math Library\trunk\Math Library\Math Library\Vector2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\..\..\..\Seth%27s Work\Maths for Games\Maths for Games Assignments\Math Library\trunk\Math Library\Math Library\Vector3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\..\Seth%27s Work\Maths for Games\Maths for Games Assignments\Math Library\trunk\Math Library\Math Library\Binary.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\..\Seth%27s Work\Maths for Games\Maths for Games Assignments\Math Library\trunk\Math Library\Math Library\Vector4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
